--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -14,9 +14,9 @@ h1 {
 a {
   color: aquamarine;
   font-size: 16px;
-  display: block;
 }
 
 body {
   background-color: #000;
+  text-align: center;
 }
