--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -12,13 +12,19 @@ h1 {
 }
 
 h2 {
-  font-size: 32px;
+  font-size: 42px;
   font-weight: 300;
+  color: #fff;
+}
+
+p {
+  font-size: 21px;
+  color: gray;
 }
 
 a {
-  color: aquamarine;
   font-size: 16px;
+  color: aquamarine;
 }
 
 body {
