--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,15 +6,17 @@ a {
   text-align: center;
 }
 
+h1, h2 {
+  color: #fff;
+}
+
 h1 {
   font-size: 50px;
-  color: #fff;
 }
 
 h2 {
   font-size: 42px;
   font-weight: 300;
-  color: #fff;
 }
 
 p {
@@ -22,14 +24,14 @@ p {
   color: gray;
 }
 
-#copyright {
-  text-align: right;
-  color: gray;
-}
-
 a {
   font-size: 16px;
   color: aquamarine;
+}
+
+#copyright {
+  text-align: right;
+  color: gray;
 }
 
 body {
